relcoord/deployment-relcoord-noa-re.yaml
# Source: relcoord.noa.re
apiVersion: apps/v1
kind: Deployment
metadata:
  name: relcoord-noa-re
  labels:
    app: relcoord-noa-re
  namespace: relcoord
  annotations:
    noa.re/deploy-id: 00ee1cf77d245aff
spec:
  replicas: 2
  selector:
    matchLabels:
      app: relcoord-noa-re
  template:
    metadata:
      labels:
        app: relcoord-noa-re
      annotations:
        checksum/config: 207eed6e8ecf8fa6ec0bbec4810cc3c618ad93b83d594bc4e38ec35d6663e23e
    spec:
      containers:
      - name: relcoord-noa-re
        image: repo.noa.re/relcoord:0.1.0-45ae9bc3
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
        volumeMounts:
        - name: relcoord-noa-re-config
          mountPath: /config
        - name: tokens
          mountPath: /var/run/secrets/tokens
          readOnly: true
      volumes:
      - name: relcoord-noa-re-config
        configMap:
          name: relcoord-noa-re-config
      - name: tokens
        projected:
          sources:
          - serviceAccountToken:
              path: idmouse
              expirationSeconds: 3600
              audience: idmouse
          - serviceAccountToken:
              path: idcat.noa.re
              expirationSeconds: 3600
              audience: idcat.noa.re
