relcoord/httproute-relcoord-noa-re.yaml
# Source: relcoord.noa.re
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: relcoord-noa-re
  namespace: relcoord
spec:
  parentRefs:
  - name: relcoord-noa-re
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - relcoord.noa.re
  rules:
  - backendRefs:
    - name: relcoord-noa-re
      port: 80
      group: ''
      kind: Service
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
